Implement P02 Garmin read sync
